<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/activity_main_name_hint"
        android:id="@+id/edittext_activity_main_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_activity_main_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/activity_main_surname_hint"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_main_name"
        android:layout_below="@+id/edittext_activity_main_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_activity_main_fill_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/activity_main_button_transition"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_main_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>