<resources>
    <string name="app_name">education</string>

    <string name="activity_main_name_hint">Введите имя</string>
    <string name="activity_main_surname_hint">Введите фамилию</string>
    <string name="activity_main_button_transition">Отправить данные</string>
</resources>
